started working on Genres feature

--- a/src/Presentation/Views/EmailTemplates/EmailTemplates.cshtml
+++ b/src/Presentation/Views/EmailTemplates/EmailTemplates.cshtml
@@ -1,4 +1,4 @@
-﻿@model Nika1337.Library.Presentation.Models.Operations.EmailTemplateViewModel
+﻿@model Nika1337.Library.Presentation.Models.EmailTemplates.EmailTemplateViewModel
 
 @{
     ViewData["Title"] = "Email Templates";
