added screen for all genres, create Genre and edit genre function left to implement

--- a/src/Presentation/Views/EmailTemplates/EmailTemplates.cshtml
+++ b/src/Presentation/Views/EmailTemplates/EmailTemplates.cshtml
@@ -113,12 +113,12 @@
                     <textarea asp-for="Body" class="form-control" id="tinymce-editor"></textarea>
                 </div>
 
-                <div class="fab-container">
+                <div class="myfab-container">
                     <div class="d-flex flex-column">
-                        <button type="submit" class="btn btn-primary mb-2 fab">
+                        <button type="submit" class="btn btn-primary mb-2 myfab">
                             Save
                         </button>
-                        <button type="button" class="btn @actionButtonClass fab" data-bs-toggle="modal" data-bs-target="#actionModal">
+                        <button type="button" class="btn @actionButtonClass myfab" data-bs-toggle="modal" data-bs-target="#actionModal">
                             @userAction
                         </button>
                     </div>
