--- a/src/Presentation/Views/EmployeeAccount/Profile.cshtml
+++ b/src/Presentation/Views/EmployeeAccount/Profile.cshtml
@@ -129,8 +129,8 @@
                 </div>
             </div>
         </div>
-        <div class="fab-container">
-            <button type="submit" class="btn btn-primary fab">
+        <div class="myfab-container">
+            <button type="submit" class="btn btn-primary myfab">
                 Save
             </button>
         </div>
