--- a/src/Presentation/Views/EmployeeManagement/Profile.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/Profile.cshtml
@@ -150,10 +150,10 @@
                                 </div>
                             </div>
 
-                            <div class="d-flex align-items-end justify-content-end fab-container">
+                            <div class="d-flex align-items-end justify-content-end myfab-container">
                                 <div class="d-flex flex-column">
-                                    <button type="submit" class="btn btn-primary fab mb-2">Save Changes</button>
-                                    <button type="button" class="btn @actionButtonClass fab" data-bs-toggle="modal" data-bs-target="#actionModal">@userAction</button>
+                                    <button type="submit" class="btn btn-primary myfab mb-2">Save Changes</button>
+                                    <button type="button" class="btn @actionButtonClass myfab" data-bs-toggle="modal" data-bs-target="#actionModal">@userAction</button>
                                 </div>
                             </div>
                         </div>
