--- a/src/Presentation/Views/EmployeeManagement/RegisterEmployee.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/RegisterEmployee.cshtml
@@ -91,8 +91,8 @@
                         </div>
                     </div>
 
-                    <div class="d-flex align-items-end justify-content-end fab-container">
-                        <button type="submit" class="btn btn-primary fab" >Register</button>
+                    <div class="d-flex align-items-end justify-content-end myfab-container">
+                        <button type="submit" class="btn btn-primary myfab" >Register</button>
                     </div>
                 </div>
             </form>
