--- a/src/Presentation/wwwroot/css/Shared/CardTableList.css
+++ b/src/Presentation/wwwroot/css/Shared/CardTableList.css
@@ -10,7 +10,7 @@
     border-radius: 10px 10px 0 0;
 }
 
-.employee-name {
+.card-header-name {
     color: black;
     white-space: nowrap;
     overflow: hidden;
@@ -55,21 +55,4 @@
 
 .toggle-icon.selected {
     color: #784EF1;
-}
-
-.myfab-container {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    z-index: 1000;
-}
-
-.myfab {
-    min-width: 150px;
-    height: 60px;
-    font-size: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
 }
