--- a/src/Presentation/wwwroot/css/site.css
+++ b/src/Presentation/wwwroot/css/site.css
@@ -21,14 +21,14 @@ body {
   margin-bottom: 60px;
 }
 
-.fab-container {
+.myfab-container {
     position: fixed;
     bottom: 30px;
     right: 30px;
     z-index: 1000;
 }
 
-.fab {
+.myfab {
     min-width: 150px;
     height: 60px;
     font-size: 24px;
