added reusable layout for cards Table screen, following dry principle much more, since all cardsTable style with actions is now a layout, and using it and adding new screens is much faster

--- a/src/Presentation/Views/EmailTemplates/EmailTemplates.cshtml
+++ b/src/Presentation/Views/EmailTemplates/EmailTemplates.cshtml
@@ -128,7 +128,7 @@
     </div>
 </div>
 
-@await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Email Template"));
+@await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Email Template"));
 
 @section Scripts {
     <script src="https://cdn.tiny.cloud/1/wkssty2otjmc1ux36i1xy7pdmzh2eijw8m6ogi2ll9v810e6/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
