--- a/src/Presentation/Views/EmployeeManagement/Profile.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/Profile.cshtml
@@ -165,7 +165,7 @@
 </div>
 
 
-@await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Employee"));
+@await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Employee"));
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
