--- a/src/Presentation/Views/Shared/_ActionConfirmationModalPartial.cshtml
+++ b/src/Presentation/Views/Shared/_ActionConfirmationModalPartial.cshtml
@@ -1,4 +1,4 @@
-@model Nika1337.Library.Presentation.Models.ActionConfirmationModalViewModel
+@model Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel
 
 <!-- Action Confirmation Modal -->
 <div class="modal fade" id="actionModal" tabindex="-1" aria-labelledby="actionModalLabel" aria-hidden="true">
