--- a/src/Presentation/Views/EmployeeManagement/AllEmployees.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/AllEmployees.cshtml
@@ -2,176 +2,127 @@
 
 @{
     ViewData["Title"] = "Employees";
+    Layout = "_CardTableLayout";
+    var sortOptions = new Dictionary<string, string>
+    {
+        { "username", "Username: A - Z" },
+        { "usernameDesc", "Username: Z - A" },
+        { "firstName", "First name: A - Z" },
+        { "firstNameDesc", "First name: Z - A" },
+        { "lastName", "Last name: A - Z" },
+        { "lastNameDesc", "Last name: Z - A" },
+        { "startDate", "Start Date: Ascending" },
+        { "startDateDesc", "Start Date: Descending" }
+    };
 }
 
-<div class="container-fluid p-5">
-    <h2 class="text-center m-3">@ViewData["Title"]</h2>
-    <div class="row justify-content-between">
-        <div class="col-md-6" style="width: fit-content">
-            <div class="dropdown mb-4" style="width: fit-content">
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="min-width: 200px">
-                    <span id="sortLabel">
-                        @(ViewData["SortedBy"] switch
-                        {
-                            "username" => "Username: A - Z",
-                            "usernameDesc" => "Username: Z - A",
-                            "firstName" => "First name: A - Z",
-                            "firstNameDesc" => "First name: Z - A",
-                            "lastName" => "Last name: A - Z",
-                            "lastNameDesc" => "Last name: Z - A",
-                            "startDate" => "Start Date: Ascending",
-                            "startDateDesc" => "Start Date: Descending",
-                            _ => "Sort"
-                        })
-                    </span>
-                </button>
-                <ul class="dropdown-menu" style="width: fit-content">
-                    <li><a class="dropdown-item sort-option" data-sort="username">Username: A - Z</a></li>
-                    <li><a class="dropdown-item sort-option" data-sort="usernameDesc">Username: Z - A</a></li>
-                    <li><a class="dropdown-item sort-option" data-sort="firstName">First name: A - Z</a></li>
-                    <li><a class="dropdown-item sort-option" data-sort="firstNameDesc">First name: Z - A</a></li>
-                    <li><a class="dropdown-item sort-option" data-sort="lastName">Last name: A - Z</a></li>
-                    <li><a class="dropdown-item sort-option" data-sort="lastNameDesc">Last name: Z - A</a></li>
-                    <li><a class="dropdown-item sort-option" data-sort="startDate">Start Date: Ascending</a></li>
-                    <li><a class="dropdown-item sort-option" data-sort="startDateDesc">Start Date: Descending</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-md-6" style="width: fit-content">
-            <div class="row  mb-4">
-                <div class="col-md-8" style="width: fit-content">
-                    <div class="row flex-nowrap">
-                        <div class="col-md-8" style="width: fit-content">
-                            <div class="input-group">
-                                <input type="text" id="searchTerm" class="form-control" placeholder="Search employees...">
-                                <button class="btn btn-outline-secondary" type="button" onclick="searchEmployees()">Search</button>
-                            </div>
+@section SortFilterSearchSwitch {
+    @await Html.PartialAsync("_SortFilterSearchSwitchPartial", sortOptions)
+}
+
+@section Cards {
+    @foreach (var employee in Model)
+    {
+        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 employee-card" data-username="@employee.Username" data-firstname="@employee.FirstName" data-lastname="@employee.LastName" data-startdate="@employee.StartDate" data-active="@employee.IsActive">
+            <div class="card h-100 shadow-sm d-flex flex-column">
+                <div class="card-header d-flex justify-content-between align-items-center text-white">
+                    <span class="card-header-name">@employee.FirstName @employee.LastName</span>
+                    @if (employee.IsActive)
+                    {
+                        <span class="badge bg-success badge-sm">Active</span>
+                    }
+                    else
+                    {
+                        <span class="badge bg-danger badge-sm">Terminated</span>
+                    }
+                </div>
+                <div class="card-body d-flex flex-column justify-content-between">
+                    <div class="property">
+                        <span class="text-muted">Username:</span>
+                        <span>@employee.Username</span>
+                    </div>
+                    <div class="property">
+                        <span class="text-muted">Email:</span>
+                        <span>@(employee.Email ?? "NaN")</span>
+                    </div>
+                    <div class="property">
+                        <span class="text-muted">Phone Number:</span>
+                        <span>@(employee.PhoneNumber ?? "NaN")</span>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center flex-wrap">
+                        <div class="property">
+                            <span class="text-muted">Date of Birth:</span>
+                            <span>@employee.DateOfBirth.ToShortDateString()</span>
                         </div>
-                        <div class="col-md-4 d-flex justify-content-center align-items-center" style="width: fit-content">
-                            <i id="cardViewIcon" class="fas fa-th-large toggle-icon mx-2" onclick="toggleView('card')" title="Card View"></i>
-                            <i id="tableViewIcon" class="fas fa-table toggle-icon mx-2" onclick="toggleView('table')" title="Table View"></i>
+                        <div class="property">
+                            <span class="text-muted">Start Date:</span>
+                            <span>@employee.StartDate.ToShortDateString()</span>
                         </div>
                     </div>
-                </div>
-
-                <div class="col-md-4 d-flex justify-content-center align-items-center" style="width: fit-content">
-                    <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="includeTerminated" onclick="filterEmployees()" checked>
-                        <label class="form-check-label" for="includeTerminated">Include Terminated</label>
+                    <div class="mt-auto">
+                        <a href="/Employees/@employee.Id" class="btn btn-dark btn-sm btn-block">View Profile</a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div id="cardView" class="row d-none">
-        @foreach (var employee in Model)
-        {
-            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 employee-card" data-username="@employee.Username" data-firstname="@employee.FirstName" data-lastname="@employee.LastName" data-startdate="@employee.StartDate" data-active="@employee.IsActive">
-                <div class="card h-100 shadow-sm d-flex flex-column">
-                    <div class="card-header d-flex justify-content-between align-items-center text-white">
-                        <span class="card-header-name">@employee.FirstName @employee.LastName</span>
+    }
+}
+@section Table {
+    <table id="employeeTable" class="table table-striped">
+        <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Username</th>
+                <th>Email</th>
+                <th>Phone Number</th>
+                <th>Date of Birth</th>
+                <th>Start Date</th>
+                <th>Status</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var employee in Model)
+            {
+                <tr class="employee-row" data-username="@employee.Username" data-firstname="@employee.FirstName" data-lastname="@employee.LastName" data-startdate="@employee.StartDate" data-active="@employee.IsActive">
+                    <td>@employee.FirstName</td>
+                    <td>@employee.LastName</td>
+                    <td>@employee.Username</td>
+                    <td>@(employee.Email ?? "NaN")</td>
+                    <td>@(employee.PhoneNumber ?? "NaN")</td>
+                    <td>@employee.DateOfBirth.ToShortDateString()</td>
+                    <td>@employee.StartDate.ToShortDateString()</td>
+                    <td>
                         @if (employee.IsActive)
                         {
-                            <span class="badge bg-success badge-sm">Active</span>
+                            <span class="badge bg-success">Active</span>
                         }
                         else
                         {
-                            <span class="badge bg-danger badge-sm">Terminated</span>
+                            <span class="badge bg-danger">Terminated</span>
                         }
-                    </div>
-                    <div class="card-body d-flex flex-column justify-content-between">
-                        <div class="property">
-                            <span class="text-muted">Username:</span>
-                            <span>@employee.Username</span>
-                        </div>
-                        <div class="property">
-                            <span class="text-muted">Email:</span>
-                            <span>@(employee.Email ?? "NaN")</span>
-                        </div>
-                        <div class="property">
-                            <span class="text-muted">Phone Number:</span>
-                            <span>@(employee.PhoneNumber ?? "NaN")</span>
-                        </div>
-                        <div class="d-flex justify-content-between align-items-center flex-wrap">
-                            <div class="property">
-                                <span class="text-muted">Date of Birth:</span>
-                                <span>@employee.DateOfBirth.ToShortDateString()</span>
-                            </div>
-                            <div class="property">
-                                <span class="text-muted">Start Date:</span>
-                                <span>@employee.StartDate.ToShortDateString()</span>
-                            </div>
-                        </div>
-                        <div class="mt-auto">
-                            <a href="/Employees/@employee.Id" class="btn btn-dark btn-sm btn-block">View Profile</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
+                    </td>
+                    <td>
+                        <a href="/Employees/@employee.Id" class="btn btn-dark btn-sm">View Profile</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
 
-    <div id="tableView">
-        <div class="table-responsive d-flex justify-content-center">
-            <table id="employeeTable" class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
-                        <th>Email</th>
-                        <th>Phone Number</th>
-                        <th>Date of Birth</th>
-                        <th>Start Date</th>
-                        <th>Status</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var employee in Model)
-                    {
-                        <tr class="employee-row" data-username="@employee.Username" data-firstname="@employee.FirstName" data-lastname="@employee.LastName" data-startdate="@employee.StartDate" data-active="@employee.IsActive">
-                            <td>@employee.FirstName</td>
-                            <td>@employee.LastName</td>
-                            <td>@employee.Username</td>
-                            <td>@(employee.Email ?? "NaN")</td>
-                            <td>@(employee.PhoneNumber ?? "NaN")</td>
-                            <td>@employee.DateOfBirth.ToShortDateString()</td>
-                            <td>@employee.StartDate.ToShortDateString()</td>
-                            <td>
-                                @if (employee.IsActive)
-                                {
-                                    <span class="badge bg-success">Active</span>
-                                }
-                                else
-                                {
-                                    <span class="badge bg-danger">Terminated</span>
-                                }
-                            </td>
-                            <td>
-                                <a href="/Employees/@employee.Id" class="btn btn-dark btn-sm">View Profile</a>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-    <div class="myfab-container">
-        <a href="/Employees/RegisterEmployee" class="btn btn-primary btn-lg shadow-sm myfab">
-            Register Employee
-        </a>
-    </div>
-</div>
+@section Fab {
+    <a href="/Employees/RegisterEmployee" class="btn btn-primary btn-lg shadow-sm myfab">
+        Register Employee
+    </a>
+}
 
 @section Scripts {
     <script src="~/js/EmployeeManagement/AllEmployees.js"></script>
-    <script src="~/js/Shared/CardTableList.js"></script>
+    <script src="~/js/Shared/SortFilterSearchSwitch.js"></script>
 }
 
 @section Styles {
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/css/Shared/CardTableList.css" asp-append-version="true" />
 }
