--- a/src/Presentation/Views/Genres/Genres.cshtml
+++ b/src/Presentation/Views/Genres/Genres.cshtml
@@ -79,7 +79,9 @@
 }
 
 @section Fab {
-
+    <a href="/Books/Genres/AddGenre" class="btn btn-primary btn-lg shadow-sm myfab">
+        Add Genre
+    </a>
 }
 
 @section Scripts {
