--- a/src/Presentation/Views/EmployeeManagement/Profile.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/Profile.cshtml
@@ -1,11 +1,161 @@
 ﻿@model Nika1337.Library.Presentation.Models.EmployeeManagement.EmployeeProfileViewModel
 @{
+    Layout = "_DetailLayout";
     ViewData["Title"] = "Edit Employee";
     var userAction = Model.TerminationDate == null ? "Terminate" : "Renew";
     var actionButtonClass = Model.TerminationDate == null ? "btn-danger" : "btn-warning";
 }
 
-<div class="container-fluid pt-5">
+<form asp-route="Employees/Profile" method="post" class="needs-validation" novalidate>
+    <div class="row justify-content-center">
+        <!-- Address Card - 1/3 width -->
+        <div class="col-xl-4">
+            <div class="card mb-4">
+                <h5 class="card-header">Address</h5>
+                <div class="card-body">
+                    <div class="mb-3">
+                        <label asp-for="Country" class="form-label"></label>
+                        <input asp-for="Country" class="form-control" readonly>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="State" class="form-label"></label>
+                        <input asp-for="State" class="form-control" readonly>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="City" class="form-label"></label>
+                        <input asp-for="City" class="form-control" readonly>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="Street" class="form-label"></label>
+                        <input asp-for="Street" class="form-control" readonly>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="PostalCode" class="form-label"></label>
+                        <input asp-for="PostalCode" class="form-control" readonly>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Read Only Info Car - 1/3 width -->
+        <div class="col-xl-4">
+            <div class="card mb-4">
+                <h5 class="card-header">Read Only Info</h5>
+                <div class="card-body">
+                    <div class="mb-3">
+                        <label asp-for="Email" class="form-label"></label>
+                        <input asp-for="Email" class="form-control" readonly>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="PhoneNumber" class="form-label"></label>
+                        <input asp-for="PhoneNumber" class="form-control" readonly>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="Gender" class="form-label"></label>
+                        <input asp-for="Gender" class="form-control" readonly>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="StartDate" class="form-label"></label>
+                        <input asp-for="StartDate" class="form-control" readonly>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="TerminationDate" class="form-label"></label>
+                        <input asp-for="TerminationDate" class="form-control" readonly>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xl-8">
+            <div class="card mb-4">
+                <h5 class="card-header">Employee Information</h5>
+                <div class="card-body">
+                    <input type="hidden" asp-for="Id" />
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="FirstName"></label>
+                                <input asp-for="FirstName" class="form-control" />
+                                <span asp-validation-for="FirstName" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="LastName"></label>
+                                <input asp-for="LastName" class="form-control" />
+                                <span asp-validation-for="LastName" class="text-danger"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="Username"></label>
+                                <input asp-for="Username" class="form-control" />
+                                <span asp-validation-for="Username" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="IdNumber"></label>
+                                <input asp-for="IdNumber" class="form-control" />
+                                <span asp-validation-for="IdNumber" class="text-danger"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="DateOfBirth"></label>
+                                <input asp-for="DateOfBirth" class="form-control" type="date" />
+                                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="Salary"></label>
+                                <input asp-for="Salary" class="form-control" />
+                                <span asp-validation-for="Salary" class="text-danger"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-8 mb-3">
+                            <div class="form-group">
+                                <label asp-for="SelectedRoles">Roles</label>
+                                <div>
+                                    @foreach (var role in Model.AvailableRoles)
+                                    {
+                                        <div class="form-check">
+                                            <input type="hidden" asp-for="AvailableRoles" value="@role">
+                                            <input class="form-check-input" type="checkbox" id="@role" name="SelectedRoles" value="@role" @(Model.SelectedRoles.Contains(role) ? "checked" : "")>
+                                            <label class="form-check-label" for="@role">@role</label>
+                                        </div>
+                                    }
+                                    <span asp-validation-for="SelectedRoles" class="text-danger"></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="d-flex align-items-end justify-content-end myfab-container">
+                            <div class="d-flex flex-column">
+                                <button type="submit" class="btn btn-primary myfab mb-2">Save Changes</button>
+                                <button type="button" class="btn @actionButtonClass myfab" data-bs-toggle="modal" data-bs-target="#actionModal">@userAction</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</form>
+
+@section Error {
     @if (!string.IsNullOrEmpty(Model.ErrorMessage))
     {
         <div class="d-flex flex-column align-items-center">
@@ -14,158 +164,11 @@
             </div>
         </div>
     }
-    <form asp-route="Employees/Profile" method="post" class="needs-validation" novalidate>
-        <div class="row justify-content-center">
-            <!-- Address Card - 1/3 width -->
-            <div class="col-xl-4">
-                <div class="card mb-4">
-                    <h5 class="card-header">Address</h5>
-                    <div class="card-body">
-                        <div class="mb-3">
-                            <label asp-for="Country" class="form-label"></label>
-                            <input asp-for="Country" class="form-control" readonly>
-                        </div>
-                        <div class="mb-3">
-                            <label asp-for="State" class="form-label"></label>
-                            <input asp-for="State" class="form-control" readonly>
-                        </div>
-                        <div class="mb-3">
-                            <label asp-for="City" class="form-label"></label>
-                            <input asp-for="City" class="form-control" readonly>
-                        </div>
-                        <div class="mb-3">
-                            <label asp-for="Street" class="form-label"></label>
-                            <input asp-for="Street" class="form-control" readonly>
-                        </div>
-                        <div class="mb-3">
-                            <label asp-for="PostalCode" class="form-label"></label>
-                            <input asp-for="PostalCode" class="form-control" readonly>
-                        </div>
-                    </div>
-                </div>
-            </div>
+}
 
-            <!-- Read Only Info Car - 1/3 width -->
-            <div class="col-xl-4">
-                <div class="card mb-4">
-                    <h5 class="card-header">Read Only Info</h5>
-                    <div class="card-body">
-                        <div class="mb-3">
-                            <label asp-for="Email" class="form-label"></label>
-                            <input asp-for="Email" class="form-control" readonly>
-                        </div>
-                        <div class="mb-3">
-                            <label asp-for="PhoneNumber" class="form-label"></label>
-                            <input asp-for="PhoneNumber" class="form-control" readonly>
-                        </div>
-                        <div class="mb-3">
-                            <label asp-for="Gender" class="form-label"></label>
-                            <input asp-for="Gender" class="form-control" readonly>
-                        </div>
-                        <div class="mb-3">
-                            <label asp-for="StartDate" class="form-label"></label>
-                            <input asp-for="StartDate" class="form-control" readonly>
-                        </div>
-                        <div class="mb-3">
-                            <label asp-for="TerminationDate" class="form-label"></label>
-                            <input asp-for="TerminationDate" class="form-control" readonly>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-xl-8">
-                <div class="card mb-4">
-                    <h5 class="card-header">Employee Information</h5>
-                    <div class="card-body">
-                        <input type="hidden" asp-for="Id" />
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <div class="form-group">
-                                    <label asp-for="FirstName"></label>
-                                    <input asp-for="FirstName" class="form-control" />
-                                    <span asp-validation-for="FirstName" class="text-danger"></span>
-                                </div>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <div class="form-group">
-                                    <label asp-for="LastName"></label>
-                                    <input asp-for="LastName" class="form-control" />
-                                    <span asp-validation-for="LastName" class="text-danger"></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <div class="form-group">
-                                    <label asp-for="Username"></label>
-                                    <input asp-for="Username" class="form-control" />
-                                    <span asp-validation-for="Username" class="text-danger"></span>
-                                </div>
-                            </div>
-
-                            <div class="col-md-6 mb-3">
-                                <div class="form-group">
-                                    <label asp-for="IdNumber"></label>
-                                    <input asp-for="IdNumber" class="form-control" />
-                                    <span asp-validation-for="IdNumber" class="text-danger"></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <div class="form-group">
-                                    <label asp-for="DateOfBirth"></label>
-                                    <input asp-for="DateOfBirth" class="form-control" type="date" />
-                                    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-                                </div>
-                            </div>
-
-                            <div class="col-md-6 mb-3">
-                                <div class="form-group">
-                                    <label asp-for="Salary"></label>
-                                    <input asp-for="Salary" class="form-control" />
-                                    <span asp-validation-for="Salary" class="text-danger"></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-8 mb-3">
-                                <div class="form-group">
-                                    <label asp-for="SelectedRoles">Roles</label>
-                                    <div>
-                                        @foreach (var role in Model.AvailableRoles)
-                                        {
-                                            <div class="form-check">
-                                                <input type="hidden" asp-for="AvailableRoles" value="@role">
-                                                <input class="form-check-input" type="checkbox" id="@role" name="SelectedRoles" value="@role" @(Model.SelectedRoles.Contains(role) ? "checked" : "")>
-                                                <label class="form-check-label" for="@role">@role</label>
-                                            </div>
-                                        }
-                                        <span asp-validation-for="SelectedRoles" class="text-danger"></span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="d-flex align-items-end justify-content-end myfab-container">
-                                <div class="d-flex flex-column">
-                                    <button type="submit" class="btn btn-primary myfab mb-2">Save Changes</button>
-                                    <button type="button" class="btn @actionButtonClass myfab" data-bs-toggle="modal" data-bs-target="#actionModal">@userAction</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </form>
-</div>
-
-
-@await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Employee"));
+@section ActionModal {
+    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Employee"));
+}
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
