--- a/src/Presentation/Views/Genres/AddGenre.cshtml
+++ b/src/Presentation/Views/Genres/AddGenre.cshtml
@@ -1,19 +1,16 @@
-﻿@model Nika1337.Library.Presentation.Models.Genres.GenreDetailViewModel
+@model Nika1337.Library.Presentation.Models.Genres.GenreCreateViewModel
 @{
     Layout = "_DetailLayout";
     ViewData["Title"] = Model.Name;
-    var userAction = Model.DeletedDate == null ? "Delete" : "Renew";
-    var actionButtonClass = Model.DeletedDate == null ? "btn-danger" : "btn-warning";
 }
 
 
-<form asp-route="Books/Genres" method="post" class="needs-validation" novalidate>
+<form asp-route="Books/Genres/AddGenre" method="post" class="needs-validation" novalidate>
     <div class="row justify-content-center">
         <div class="col-xl-8">
             <div class="card mb-4">
-                <h5 class="card-header">Genre Information</h5>
+                <h5 class="card-header">Add Genre</h5>
                 <div class="card-body">
-                    <input type="hidden" asp-for="Id" />
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <div class="form-group">
@@ -34,13 +31,8 @@
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="d-flex align-items-end justify-content-end myfab-container">
-                            <div class="d-flex flex-column">
-                                <button type="submit" class="btn btn-primary myfab mb-2">Save Changes</button>
-                                <button type="button" class="btn @actionButtonClass myfab" data-bs-toggle="modal" data-bs-target="#actionModal">@userAction</button>
-                            </div>
-                        </div>
+                    <div class="d-flex align-items-end justify-content-end myfab-container">
+                        <button type="submit" class="btn btn-primary myfab">Add</button>
                     </div>
                 </div>
             </div>
@@ -59,17 +51,6 @@
     }
 }
 
-
-@section ActionModal {
-    @await Html.PartialAsync("_ActionConfirmationModalPartial", new Nika1337.Library.Presentation.Models.Shared.ActionConfirmationModalViewModel(userAction, actionButtonClass, "Genre"));
-}
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script src="~/js/Shared/ActionModal.js"></script>
-    <script src="~/js/Books/Genres/Genre.js"></script>
-    <script>
-        var id = '@Model.Id';
-        var userAction = '@userAction';
-    </script>
 }
