fixed sizing of some elements, so they look better

--- a/src/Presentation/Views/Languages/AddLanguage.cshtml
+++ b/src/Presentation/Views/Languages/AddLanguage.cshtml
@@ -7,12 +7,12 @@
 
 <form asp-route="Books/Languages/AddLanguage" method="post" class="needs-validation" novalidate>
     <div class="row justify-content-center">
-        <div class="col-xl-8">
+        <div class="col-md-6">
             <div class="card mb-4">
                 <h5 class="card-header">Add Language</h5>
                 <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
+                    <div class="row d-flex justify-content-center">
+                        <div class="mb-3">
                             <div class="form-group">
                                 <label asp-for="Name" class="form-label"></label>
                                 <input asp-for="Name" class="form-control" />
