--- a/src/Presentation/Views/Languages/Language.cshtml
+++ b/src/Presentation/Views/Languages/Language.cshtml
@@ -9,13 +9,13 @@
 
 <form asp-route="Books/Languages" method="post" class="needs-validation" novalidate>
     <div class="row justify-content-center">
-        <div class="col-xl-8">
+        <div class="col-md-6">
             <div class="card mb-4">
                 <h5 class="card-header">Language Information</h5>
                 <div class="card-body">
                     <input type="hidden" asp-for="Id" />
                     <div class="row">
-                        <div class="col-md-6 mb-3">
+                        <div class=" mb-3">
                             <div class="form-group">
                                 <label asp-for="Name" class="form-label"></label>
                                 <input asp-for="Name" class="form-control" />
