--- a/src/Presentation/Views/Languages/Languages.cshtml
+++ b/src/Presentation/Views/Languages/Languages.cshtml
@@ -40,8 +40,8 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th>Status</th>
-                <th>Action</th>
+                <th style ="width: 10%">Status</th>
+                <th style="width: 10%">Action</th>
             </tr>
         </thead>
         <tbody>
