--- a/src/Presentation/Views/EmployeeManagement/RegisterEmployee.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/RegisterEmployee.cshtml
@@ -5,91 +5,93 @@
     ViewData["Title"] = "Register Employee";
 }
 <div class="row justify-content-center">
-    <div class="card" style="width: 100%; max-width: 1000px;">
-        <h5 class="card-header">@ViewData["Title"]</h5>
-        <div class="card-body">
-            <form asp-route="Employees/RegisterEmployee" method="post" class="needs-validation" novalidate>
-                <div class="row">
-                    <div class="col-md-6 mb-3">
-                        <div class="form-group">
-                            <label asp-for="FirstName"></label>
-                            <input asp-for="FirstName" class="form-control" required>
-                            <span asp-validation-for="FirstName" class="text-danger"></span>
+   <div class="col-xl-8">
+        <div class="card" style="">
+            <h5 class="card-header">@ViewData["Title"]</h5>
+            <div class="card-body">
+                <form asp-route="Employees/RegisterEmployee" method="post" class="needs-validation" novalidate>
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="FirstName"></label>
+                                <input asp-for="FirstName" class="form-control" required>
+                                <span asp-validation-for="FirstName" class="text-danger"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <div class="form-group">
-                            <label asp-for="LastName"></label>
-                            <input asp-for="LastName" class="form-control" required>
-                            <span asp-validation-for="LastName" class="text-danger"></span>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-md-6 mb-3">
-                        <div class="form-group">
-                            <label asp-for="Username"></label>
-                            <input asp-for="Username" class="form-control" required>
-                            <span asp-validation-for="Username" class="text-danger"></span>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 mb-3">
-                        <div class="form-group">
-                            <label asp-for="IdNumber"></label>
-                            <input asp-for="IdNumber" class="form-control" required>
-                            <span asp-validation-for="IdNumber" class="text-danger"></span>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-md-6 mb-3">
-                        <div class="form-group">
-                            <label asp-for="DateOfBirth"></label>
-                            <input asp-for="DateOfBirth" class="form-control" type="date" required>
-                            <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 mb-3">
-                        <div class="form-group">
-                            <label asp-for="Salary"></label>
-                            <input asp-for="Salary" class="form-control" required>
-                            <span asp-validation-for="Salary" class="text-danger"></span>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-md-9 mb-3">
-                        <div class="form-group">
-                            <label asp-for="SelectedRoles">Roles</label>
-                            <div>
-                                @foreach (var role in Model.AvailableRoles)
-                                {
-                                    <div class="form-check">
-                                        <input type="hidden" asp-for="AvailableRoles" value="@role">
-                                        <input class="form-check-input" type="checkbox" id="@role" name="SelectedRoles" value="@role" @(Model.SelectedRoles.Contains(role) ? "checked" : "")>
-                                        <label class="form-check-label" for="@role">@role</label>
-                                    </div>
-                                }
-                                <span asp-validation-for="SelectedRoles" class="text-danger"></span>
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="LastName"></label>
+                                <input asp-for="LastName" class="form-control" required>
+                                <span asp-validation-for="LastName" class="text-danger"></span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="d-flex align-items-end justify-content-end myfab-container">
-                        <button type="submit" class="btn btn-primary myfab">Register</button>
+
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="Username"></label>
+                                <input asp-for="Username" class="form-control" required>
+                                <span asp-validation-for="Username" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="IdNumber"></label>
+                                <input asp-for="IdNumber" class="form-control" required>
+                                <span asp-validation-for="IdNumber" class="text-danger"></span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </form>
+
+
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="DateOfBirth"></label>
+                                <input asp-for="DateOfBirth" class="form-control" type="date" required>
+                                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label asp-for="Salary"></label>
+                                <input asp-for="Salary" class="form-control" required>
+                                <span asp-validation-for="Salary" class="text-danger"></span>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-md-9 mb-3">
+                            <div class="form-group">
+                                <label asp-for="SelectedRoles">Roles</label>
+                                <div>
+                                    @foreach (var role in Model.AvailableRoles)
+                                    {
+                                        <div class="form-check">
+                                            <input type="hidden" asp-for="AvailableRoles" value="@role">
+                                            <input class="form-check-input" type="checkbox" id="@role" name="SelectedRoles" value="@role" @(Model.SelectedRoles.Contains(role) ? "checked" : "")>
+                                            <label class="form-check-label" for="@role">@role</label>
+                                        </div>
+                                    }
+                                    <span asp-validation-for="SelectedRoles" class="text-danger"></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="d-flex align-items-end justify-content-end myfab-container">
+                            <button type="submit" class="btn btn-primary myfab">Register</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
+   </div>
 </div>
 
 
