added authors feature.

--- a/src/Presentation/Views/EmployeeManagement/AllEmployees.cshtml
+++ b/src/Presentation/Views/EmployeeManagement/AllEmployees.cshtml
@@ -13,8 +13,8 @@
         { "lastNameDesc", "Last name: Z - A" },
         { "startDate", "Start Date: Ascending" },
         { "startDateDesc", "Start Date: Descending" },
-        { "DateOfBirth", "Date Of Birth: Ascending" },
-        { "DateOfBirthDesc", "Date Of Birth: Descending" }
+        { "dateOfBirth", "Date Of Birth: Ascending" },
+        { "dateOfBirthDesc", "Date Of Birth: Descending" }
     };
 }
 
