added Nlog and global exception handling, changed error view names to better represent what they stand for

--- a/src/Presentation/Views/Home/Error.cshtml
+++ b/src/Presentation/Views/Home/Error.cshtml
@@ -1,16 +1,15 @@
-
+ï»¿
 @{
     ViewData["Title"] = "Error";
 }
 
 <div class="position-absolute top-50 start-50 translate-middle">
     <div class="text-center">
-        <h1 class="display-1 fw-bold">404</h1>
-        <p class="fs-3"> <span class="text-danger">Opps!</span> Page not found.</p>
+        <h1 class="display-1 fw-bold">Ooops!</h1>
+        <p class="fs-3"> <span class="text-danger">Opps!</span>Something went wrong</p>
         <p class="lead">
-            The page you’re looking for doesn’t exist.
+            Unexpected Error Occured!
         </p>
         <a href="/" class="btn btn-primary">Go Home</a>
     </div>
 </div>
-
