--- a/src/Presentation/Views/Authors/Authors.cshtml
+++ b/src/Presentation/Views/Authors/Authors.cshtml
@@ -25,7 +25,7 @@
 @section Cards {
     @foreach (var author in Model)
     {
-    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 author-card" data-name="@author.Name" data-dateofbirth="@author.DateOfBirth" data-isalive="@author.IsAlive" data-active="@(!author.DeletedDate.HasValue)">
+        <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 author-card" data-name="@author.Name" data-dateofbirth="@author.DateOfBirth" data-isalive="@author.IsAlive" data-active="@(!author.DeletedDate.HasValue)" href="/Books/Authors/@author.Id" style="text-decoration:none; color:black">
             <div class="card h-100 shadow-sm d-flex flex-column">
                 <div class="card-header d-flex justify-content-between align-items-center text-white">
                     <span class="card-header-name">@author.Name</span>
@@ -49,12 +49,9 @@
                             <span>@author.DateOfBirth.ToShortDateString()</span>
                         </div>
                     </div>
-                    <div class="mt-auto">
-                        <a href="/Books/Authors/@author.Id" class="btn btn-dark btn-sm btn-block">View Profile</a>
-                    </div>
                 </div>
             </div>
-        </div>
+        </a>
     }
 }
 
