--- a/src/Presentation/Views/Genres/Genres.cshtml
+++ b/src/Presentation/Views/Genres/Genres.cshtml
@@ -17,7 +17,7 @@
 @section Cards {
     @foreach (var genre in Model)
     {
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 genre-card" data-name="@genre.Name" data-active="@(!genre.DeletedDate.HasValue)">
+        <a class="col-sm-12 col-md-6 col-lg-4 col-xl-3 mb-4 genre-card" data-name="@genre.Name" data-active="@(!genre.DeletedDate.HasValue)" href="/Books/Genres/@genre.Id" style="text-decoration:none; color:black">
             <div class="card h-100 shadow-sm d-flex flex-column">
                 <div class="card-header d-flex justify-content-between align-items-center text-white">
                     <span class="card-header-name">@genre.Name</span>
@@ -34,12 +34,9 @@
                     <div class="property">
                         <span>@genre.Description</span>
                     </div>
-                    <div class="mt-auto">
-                        <a href="/Books/Genres/@genre.Id" class="btn btn-dark btn-sm btn-block">View Details</a>
-                    </div>
                 </div>
             </div>
-        </div>
+        </a>
     }
 }
 
